Added not yet working gaussian mixture model

--- a/Art/Python-Analytics/ColorPaletteAnalysis.ipynb
+++ b/Art/Python-Analytics/ColorPaletteAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "        7.580000e+02]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,23 +191,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x27250118800>,\n",
-       "  <matplotlib.lines.Line2D at 0x272500a68a0>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x272500a6f30>,\n",
-       "  <matplotlib.lines.Line2D at 0x272500a6de0>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x272500a7a70>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x272500a7fb0>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x272500a63c0>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x1ed990c3890>,\n",
+       "  <matplotlib.lines.Line2D at 0x1ed990c3b90>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x1ed990c3ec0>,\n",
+       "  <matplotlib.lines.Line2D at 0x1edae150230>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x1ed9db03260>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x1edae150530>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x1edae150860>],\n",
        " 'means': []}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -229,16 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2725001a240>"
+       "<seaborn.axisgrid.FacetGrid at 0x1ed9db27e60>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
        "'\\n# 3D Heatmap in Python using matplotlib \\n  \\n# to make plot interactive  \\n%matplotlib \\n  \\n# importing required libraries \\nfrom mpl_toolkits.mplot3d import Axes3D \\nimport matplotlib.pyplot as plt \\nfrom pylab import *\\n  \\n# creating a dummy dataset \\n#x = np.random.randint(low=100, high=500, size=(1000,)) \\n#y = np.random.randint(low=300, high=500, size=(1000,)) \\n#z = np.random.randint(low=200, high=500, size=(1000,)) \\ncolo = highpass_colorCountsm.flatten()\\n  \\n# creating figures \\nfig = plt.figure(figsize=(10, 10)) \\nax = fig.add_subplot(111, projection=\\'3d\\') \\n  \\n# setting color bar \\ncolor_map = cm.ScalarMappable(cmap=cm.Greens_r) \\ncolor_map.set_array(colo) \\n  \\n# creating the heatmap \\nimg = ax.scatter(x, y, z, marker=\\'s\\', \\n                 s=200, color=\\'green\\') \\nplt.colorbar(color_map) \\n  \\n# adding title and labels \\nax.set_title(\"3D Heatmap\") \\nax.set_xlabel(\\'X-axis\\') \\nax.set_ylabel(\\'Y-axis\\') \\nax.set_zlabel(\\'Z-axis\\') \\n  \\n# displaying plot \\nplt.show() \\n'"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,20 +906,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[    0., 22114., 13371.,  7602.,  8342.],\n",
-       "       [16300., 10132.,  4111.,  5250.,  1172.],\n",
-       "       [ 4473.,  7989.,  7041.,  2569.,  3459.],\n",
-       "       [ 6779.,  1600.,  5362.,  1140.,  2845.],\n",
-       "       [ 7889.,  1622.,  1073.,  2209.,     0.]])"
+       "array([[    0. , 22114.1, 13371.1,  7602.1,  8342.1],\n",
+       "       [16300.1, 10132.1,  4111.1,  5250.1,  1172.1],\n",
+       "       [ 4473.1,  7989.1,  7041.1,  2569.1,  3459.1],\n",
+       "       [ 6779.1,  1600.1,  5362.1,  1140.1,  2845.1],\n",
+       "       [ 7889.1,  1622.1,  1073.1,  2209.1,     0. ]])"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
        "'\\npalette1m = np.zeros((10,9,3))\\ni_=0\\nfor x in range(palette1m.shape[0]):\\n    for y in range(palette1m.shape[1]):\\n            if i_<85:\\n                palette1m[x,y] = np.array(refinedCommonColorsl[i_])\\n            i_+=1\\n\\npalette1m[0:10,0,:]\\npalette1m[0,0,:]\\n'"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1260,6 +1260,105 @@
     "plt.imshow(paletteBitmapImagem_1)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn\n",
+    "from sklearn.mixture import GaussianMixture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Kay\\anaconda3\\envs\\jellybean\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1429: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "gm = GaussianMixture(n_components=5, random_state=0).fit(colorCountsLogm[:,:,30])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.10214188, -0.45387064, -0.66755954, ..., -2.30258509,\n",
+       "        -2.30258509, -2.30258509],\n",
+       "       [ 2.51645875,  0.30756777,  0.19649969, ..., -2.30258509,\n",
+       "        -2.30258509, -2.30258509],\n",
+       "       [ 2.94767142,  1.04200193,  1.88569726, ..., -2.30258509,\n",
+       "        -2.30258509, -2.30258509],\n",
+       "       [-1.82251592, -1.97131271, -1.9609033 , ..., -2.24808747,\n",
+       "        -2.30258509, -2.30258509],\n",
+       "       [-0.60270658, -1.55030935, -1.74140988, ..., -2.30258509,\n",
+       "        -2.30258509, -2.30258509]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gm.means_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "what is this kind of data called because the algorithm expects to count points not be provided with points with counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
