Added Character Trait: Height

--- a/Writing/Random Character Trait Assignment.ipynb
+++ b/Writing/Random Character Trait Assignment.ipynb
@@ -16,13 +16,14 @@
     "* [Population Percentages](#first-bullet)\n",
     "    * [Sexual Orientation](#second-bullet)\n",
     "    * [Age](#third-bullet)\n",
-    "    * [Visual Imparment](#fourth-bullet)\n",
-    "    * [Handedness](#fifth-bullet)"
+    "    * [Visual impairment](#fourth-bullet)\n",
+    "    * [Handedness](#fifth-bullet)\n",
+    "    * [Max Height](#sixth-bullet)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,10 +48,13 @@
     "import pandas as pd\n",
     "import random\n",
     "\n",
-    "filename =\"CharacterNames.csv\"\n",
+    "filename =\"CharacterNamesV3.csv\"\n",
     "names_df = pd.read_csv(filename, sep=\",\")\n",
     "names_df[\"sexual_orientation\"] = \"\"\n",
     "names_df[\"age\"] = 0\n",
+    "names_df[\"visual_impairment\"] = \"\"\n",
+    "names_df[\"handedness\"] = \"\"\n",
+    "names_df[\"heightCM\"] = 0\n",
     "\n",
     "#print(names_df.shape)\n",
     "#names_df.head()\n",
@@ -144,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,13 +161,14 @@
     "other_p= 0.01\n",
     "idk_p = 0.13\n",
     "heterosexual = 0.71\n",
+    "orientation_column_num = names_df.columns.get_loc(\"sexual_orientation\")\n",
     "\n",
-    "(names_df, ppl_list) =  setGeneralTrait(gay_lesbian_p,\"Gay/Lesbian\", df=names_df, ppl_list=[], column_num=8) # column 8 is sexual_orientation\n",
-    "(names_df, ppl_list) =  setGeneralTrait(bisexual_p,\"Bisexual\", df=names_df, ppl_list=ppl_list, column_num=8)\n",
-    "(names_df, ppl_list) =  setGeneralTrait(pansexual_p,\"Pansexual\", df=names_df, ppl_list=ppl_list, column_num=8)\n",
-    "(names_df, ppl_list) =  setGeneralTrait(asexual_p,\"Asexual\", df=names_df, ppl_list=ppl_list, column_num=8)\n",
-    "(names_df, ppl_list) =  setGeneralTrait(other_p,\"Other\", df=names_df, ppl_list=ppl_list, column_num=8)\n",
-    "(names_df, ppl_list) =  setGeneralTrait(idk_p,\"idk\", df=names_df, ppl_list=ppl_list, column_num=8)\n"
+    "(names_df, ppl_list) =  setGeneralTrait(gay_lesbian_p,\"Gay/Lesbian\", df=names_df, ppl_list=[], column_num=orientation_column_num)\n",
+    "(names_df, ppl_list) =  setGeneralTrait(bisexual_p,\"Bisexual\", df=names_df, ppl_list=ppl_list, column_num=orientation_column_num)\n",
+    "(names_df, ppl_list) =  setGeneralTrait(pansexual_p,\"Pansexual\", df=names_df, ppl_list=ppl_list, column_num=orientation_column_num)\n",
+    "(names_df, ppl_list) =  setGeneralTrait(asexual_p,\"Asexual\", df=names_df, ppl_list=ppl_list, column_num=orientation_column_num)\n",
+    "(names_df, ppl_list) =  setGeneralTrait(other_p,\"Other\", df=names_df, ppl_list=ppl_list, column_num=orientation_column_num)\n",
+    "(names_df, ppl_list) =  setGeneralTrait(idk_p,\"idk\", df=names_df, ppl_list=ppl_list, column_num=orientation_column_num)\n"
    ]
   },
   {
@@ -175,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +254,7 @@
     "        rnd_val = random.betavariate(alpha=1,beta=3)\n",
     "        return int((rnd_val + age_i)*10)\n",
     "\n",
-    "def setAge (percentage, age_i, df, ppl_list, group_size):\n",
+    "def setAge (percentage, age_i, df, ppl_list, group_size, column_num):\n",
     "\n",
     "    number_of_ppl = group_size \n",
     "\n",
@@ -259,9 +264,42 @@
     "\n",
     "    for person_ in index_ppl_w_age:\n",
     "        age_ = makeAge(age_i)\n",
-    "        df.iloc[person_,9] = age_ # column 9 is age\n",
+    "        df.iloc[person_,column_num] = age_ \n",
     "    \n",
     "    return (df, ppl_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ppl_w_list = names_df.index[names_df['genderF'] == 1].tolist()\n",
+    "ppl_m_list = names_df.index[names_df['genderM'] == 1].tolist()\n",
+    "group_size_w = len(ppl_w_list)\n",
+    "group_size_m = len(ppl_m_list)\n",
+    "age_column_num = names_df.columns.get_loc(\"age\")\n",
+    "\n",
+    "n_age_brackets = age_df.shape[0]\n",
+    "for i_ in range(n_age_brackets):\n",
+    "    [age, m_p, w_p]= list(age_df.iloc[i_,:])\n",
+    "\n",
+    "    (names_df, ppl_w_list) =  setAge(w_p, age_i=i_, df=names_df, ppl_list=ppl_w_list, group_size=group_size_w, column_num=age_column_num)\n",
+    "    (names_df, ppl_m_list) =  setAge(m_p, age_i=i_, df=names_df, ppl_list=ppl_m_list, group_size=group_size_m, column_num=age_column_num)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visual impairment <a class=\"anchor\" id=\"fourth-bullet\"></a>\n",
+    "\n",
+    "https://www.nih.gov/news-events/news-releases/study-finds-most-americans-have-good-vision-14-million-are-visually-impaired\t\n",
+    "\n",
+    "- 6% of us population is visually impared and of this 83% can be corrected with glasses/contacts.\n",
+    "- 5% of us population could use glasses.\n",
+    "- 1% has vision impairment that glasses don't help."
    ]
   },
   {
@@ -270,53 +308,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ppl_w_list = names_df.index[names_df['genderF'] == 1].tolist()\n",
-    "ppl_m_list = names_df.index[names_df['genderM'] == 1].tolist()\n",
-    "group_size_w = len(ppl_w_list)\n",
-    "group_size_m = len(ppl_m_list)\n",
+    "lenses_p = 0.05\n",
+    "otherVisualimpairment_p = 0.01\n",
+    "vision_column_num = names_df.columns.get_loc(\"visual_impairment\")\n",
     "\n",
-    "\n",
-    "n_age_brackets = age_df.shape[0]\n",
-    "for i_ in range(n_age_brackets):\n",
-    "    [age, m_p, w_p]= list(age_df.iloc[i_,:])\n",
-    "\n",
-    "    (names_df, ppl_w_list) =  setAge(w_p, age_i=i_, df=names_df, ppl_list=ppl_w_list, group_size=group_size_w)\n",
-    "    (names_df, ppl_m_list) =  setAge(m_p, age_i=i_, df=names_df, ppl_list=ppl_m_list, group_size=group_size_m)\n"
+    "(names_df, ppl_list) =  setGeneralTrait(lenses_p,\"Glasses/Contacts\", df=names_df, ppl_list=[], column_num=vision_column_num)\n",
+    "(names_df, ppl_list) =  setGeneralTrait(otherVisualimpairment_p,\"Other visual impairment\", df=names_df, ppl_list=ppl_list, column_num=vision_column_num)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Visual Imparment <a class=\"anchor\" id=\"fourth-bullet\"></a>\n",
-    "\n",
-    "https://www.nih.gov/news-events/news-releases/study-finds-most-americans-have-good-vision-14-million-are-visually-impaired\t\n",
-    "\n",
-    "- 6% of us population is visually impared and of this 83% can be corrected with glasses/contacts.\n",
-    "- 5% of us population could use glasses.\n",
-    "- 1% has vision imparment that glasses don't help."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -330,35 +328,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "left_handed_p = 0.11\n",
+    "handedness_column_num = names_df.columns.get_loc(\"handedness\")\n",
+    "(names_df, ppl_list) =  setGeneralTrait(left_handed_p,\"Left handed\", df=names_df, ppl_list=[], column_num=handedness_column_num)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Max Height <a class=\"anchor\" id=\"sixth-bullet\"></a>\n",
+    "- https://tall.life/height-percentile-calculator-age-country/\t\n",
+    "- https://en.wikipedia.org/wiki/Average_human_height_by_country\t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_rows = names_df.shape[0]\n",
+    "\n",
+    "for row_ in range(n_rows):\n",
+    "    avg_height = float(names_df.loc[row_,\"averageHeightForCountryMetricCM\"])\n",
+    "    std_height = float(names_df.loc[row_,\"STDHeightForCountryMetricCM\"])\n",
+    "\n",
+    "    rnd_normal_height = int(round(random.gauss(mu=avg_height, sigma=std_height),0))\n",
+    "\n",
+    "    names_df.loc[row_,\"heightCM\"] = rnd_normal_height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
